kubernetes/courier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: courier-deployment
  labels:
    app: courier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: courier
  template:
    metadata:
      labels:
        app: courier
    spec:
      containers:
      - name: courier
        image: jangga/courier:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: courier-service
spec:
  selector:
    app: courier
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
