kubernetes/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: courier-service.default
    http:
      paths:
      - path: /courier
        pathType: Prefix
        backend:
          service:
            name: courier-service
            port:
              number: 81
  - host: security-service.default
    http:
      paths:
      - path: /security
        pathType: Prefix
        backend:
          service:
            name: security-service
            port:
              number: 40
  - host: users-service.default
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 60
